# idlyami

./: CPPtoYAMI4Mapping.md  IDLtoCPPMapping.md  ProjectHome.md  README.md
biz.senac.idlyami/: .project
biz.senac.idlyami/src/model/: prueba.idl
biz.senac.idlyami/src/templates/common/: Expression.ext
biz.senac.idlyami/src/templates/idlyami/: CPPTypes.ext  IDLYAMI.ext  Properties.ext
biz.senac.idlyami/src/templates/idlyami/skel/: ImplCPP.xpt  ImplHPP.xpt
biz.senac.idlyami/src/templates/idlyami/stub/: StubCPP.xpt  StubHPP.xpt
biz.senac.idlyami/src/workflow/: IDLFileGenerator.mwe2  IDLFileGeneratorWithPreprocessor.mwe2
idlyami/: .cproject  .project  Arguments.hpp  ORB.cpp  ORB.hpp  Object.cpp  Operation.hpp  Operation.hpp.pump  POA.cpp  POA.hpp  Parameters.cpp  Parameters.hpp  Request.hpp  Servant.cpp  Servant.hpp  ServerRequest.cpp  Skel.hpp  Stub.hpp  adapted.hpp  any.hpp  debug.hpp  idlyami.hpp  mapping.hpp  yami_forward.hpp
idlyami/detail/: mpl.hpp
idlyami/examples/hello/: client.cpp  hello.idl  helloC.cpp  helloC.hpp  server.cpp
idlyami/scripts/: create_header_file.sh
idlyami/templates/: header  header.hpp
trunk/biz.senac.idlyami/src/model/: hello.idl
trunk/biz.senac.idlyami/src/templates/common/: Common.ext  FileNameHelper.java  Transformations.ext
trunk/biz.senac.idlyami/src/templates/idlyami/: CPPTypes.ext  FileName.ext  Main.xpt
trunk/biz.senac.idlyami/src/templates/idlyami/stub/: StubCPP.xpt  StubHPP.xpt
trunk/idlyami/: .cproject  .project  CMakeLists.txt  ORB.cpp  ORB.hpp  Object.hpp  Operation.hpp  POA.cpp  POA.hpp  Parameters.cpp  Parameters.hpp  Request.cpp  Request.hpp  ServerRequest.cpp  ServerRequest.hpp  adapted.hpp  any.hpp  mapping.hpp  yami_forward.hpp
trunk/idlyami/cmake/: pump.cmake
trunk/idlyami/examples/hello/: CMakeLists.txt  hello.idl  helloC.cpp  helloC.hpp
trunk/idlyami/scripts/: create_pump_file.sh  create_source_file.sh
trunk/idlyami/templates/: header  header.hpp
wiki/: CPPtoYAMI4Mapping.wiki  IDLtoCPPMapping.wiki
